<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/id_input_username_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_please_input_wechat_username"/>
    <EditText
        android:id="@+id/id_input_msg_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_please_input_auto_reply_msg"/>
    <CheckBox
        android:id="@+id/id_robot_auto_reply_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_robot_auto_reply"/>
</LinearLayout>
